fix subtitle font weight from collapse component

--- a/NutriFoods-UI/Components/Shared/CollapseSubtitle.razor.css
+++ b/NutriFoods-UI/Components/Shared/CollapseSubtitle.razor.css
@@ -1,6 +1,6 @@
 ﻿h3{
     font-size: 1.1em;
     font-family: Plus Jakarta Sans, serif;
-    font-weight: 600;
+    font-weight: 500;
     color: var(--grey-normal);
 }
